[gd_scene load_steps=6 format=3 uid="uid://dgxea7tpymlxw"]

[ext_resource type="Script" path="res://scripts/gameplay/gameplay_controller_v2.gd" id="1_controller"]
[ext_resource type="Script" path="res://scripts/gameplay/playfield_v2.gd" id="2_playfield"]
[ext_resource type="Script" path="res://scripts/gameplay/note_spawner.gd" id="3_spawner"]
[ext_resource type="PackedScene" uid="uid://c4nxe7gpuvmxj" path="res://scenes/notes/tap_note.tscn" id="4_note"]
[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="5_hud"]

[node name="Gameplay" type="Node2D"]
script = ExtResource("1_controller")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.05, 0.05, 0.1, 1)

[node name="PlayfieldContainer" type="Node2D" parent="."]
position = Vector2(640, 360)

[node name="StaticElements" type="Node2D" parent="PlayfieldContainer"]

[node name="JudgmentCircle" type="Line2D" parent="PlayfieldContainer/StaticElements"]
points = PackedVector2Array()
closed = true
width = 3.0
default_color = Color(0.5, 0.7, 1, 1)

[node name="InnerCircle" type="Line2D" parent="PlayfieldContainer/StaticElements"]
points = PackedVector2Array()
closed = true
width = 2.0
default_color = Color(0.3, 0.5, 0.8, 0.5)

[node name="HitZoneTop" type="ColorRect" parent="PlayfieldContainer/StaticElements"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -320.0
offset_right = 40.0
offset_bottom = -280.0
color = Color(0, 1, 0, 0.3)

[node name="HitZoneBottom" type="ColorRect" parent="PlayfieldContainer/StaticElements"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = 280.0
offset_right = 40.0
offset_bottom = 320.0
color = Color(1, 0.5, 0, 0.3)

[node name="RotatingPlayfield" type="Node2D" parent="PlayfieldContainer"]
script = ExtResource("2_playfield")

[node name="NoteSpawner" type="Node2D" parent="PlayfieldContainer/RotatingPlayfield"]
script = ExtResource("3_spawner")
note_scene = ExtResource("4_note")

[node name="NoteContainer" type="Node2D" parent="PlayfieldContainer/RotatingPlayfield"]

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("5_hud")

[node name="ScoreLabel" type="Label" parent="HUD"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 32
text = "Score: 0"

[node name="ComboLabel" type="Label" parent="HUD"]
layout_mode = 0
offset_left = 20.0
offset_top = 70.0
offset_right = 200.0
offset_bottom = 110.0
theme_override_font_sizes/font_size = 24
text = "Combo: 0"

[node name="AccuracyLabel" type="Label" parent="HUD"]
layout_mode = 0
offset_left = 20.0
offset_top = 120.0
offset_right = 200.0
offset_bottom = 160.0
text = "Accuracy: 100%"

[node name="RotationLabel" type="Label" parent="HUD"]
layout_mode = 0
offset_left = 20.0
offset_top = 170.0
offset_right = 200.0
offset_bottom = 210.0
text = "Rotation: 0Â°"

[node name="JudgmentLabel" type="Label" parent="HUD"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -150.0
offset_right = 100.0
offset_bottom = -100.0
theme_override_font_sizes/font_size = 36
horizontal_alignment = 1
vertical_alignment = 1

[node name="Instructions" type="Label" parent="HUD"]
layout_mode = 0
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 150.0
text = "Controls:
Mouse: Point to rotate
A/D: Rotate left/right
Space: Hit notes

Green Zone: TAP notes
Orange Zone: CATCH notes"

[node name="PauseMenu" type="Control" parent="HUD"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Background" type="ColorRect" parent="HUD/PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.7)

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -75.0
offset_right = 100.0
offset_bottom = 75.0

[node name="PausedLabel" type="Label" parent="HUD/PauseMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "PAUSED"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="HUD/PauseMenu/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="RestartButton" type="Button" parent="HUD/PauseMenu/VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="MenuButton" type="Button" parent="HUD/PauseMenu/VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[connection signal="pressed" from="HUD/PauseMenu/VBoxContainer/ResumeButton" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="HUD/PauseMenu/VBoxContainer/RestartButton" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="HUD/PauseMenu/VBoxContainer/MenuButton" to="." method="_on_menu_pressed"]